# ppo-agent-demo

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.text  requirements.txt
ppo-agent-demo-env/: pyvenv.cfg
src/: main.py
src/data/: simple.json
src/environments/: environment_setup.py  test_environment_setup.py
src/models/: actor.py  critic.py
src/training/: replay_buffer.py  train_sac.py  update_parameters.py
src/utilities/: load_json_dataset.py
