[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sac-agent-demo"
version = "0.1.0"
description = "SAC Agent Demo"
authors = [
    {name = "Michael McBride", email = "108891717+MichaelsEngineering@users.noreply.github.com"}
]
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["pip_requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest",
    # Add development dependencies here
]

[tool.setuptools]
packages = ["src"]